gccida/c2/dump_regset
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_regset/src/flow.c:4619:16: error: use of undeclared identifier 'off_6474F4'
fprintf( outf, off_6474F4, ( unsigned int)v5); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_regset/src/flow.c:4636:16: error: use of undeclared identifier 'off_6474F4'
fprintf( outf, off_6474F4, ( unsigned int)v8); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_regset/src/obj/flow.o] Error 1
